--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -8,5 +8,8 @@ $pass-word:'#{$base}-pass-word';
 $wave:'#{$base}-wave';
 $wave-ripple:'#{$wave}__circle-ripple';
 
+$scroll:'#{$base}-scroll';
+
 $layer:'#{$base}-layer';
+$pull:'#{$base}-pull';
 $toast:'#{$base}-toast';
