--- a/style/Wave/style.scss
+++ b/style/Wave/style.scss
@@ -11,6 +11,10 @@
     bottom: 0;
     z-index: 1;
     overflow: hidden;
+    pointer-events: none;
+    &--outside{
+      overflow:visible;
+    }
   }
   &__content{
     user-select:none;
@@ -26,8 +30,5 @@
   background-color: rgb(153,153,153);
   &--white{
     background-color: rgb(255,255,255);
-  }
-  &--outside{
-    overflow:visible;
   }
 }
