添加了演示页面的部分button演示

--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -13,3 +13,4 @@ $scroll:'#{$base}-scroll';
 $layer:'#{$base}-layer';
 $pull:'#{$base}-pull';
 $toast:'#{$base}-toast';
+$confirm:'#{$base}-confirm';
