--- a/style/fn.scss
+++ b/style/fn.scss
@@ -5,9 +5,39 @@
     display: block;
     position: absolute;
     bottom: 0;
+    left: 0;
     width: 100%;
     height: 1PX;
     transform: scaleY(0.5);
+    background-color: $color;
+  }
+}
+@mixin line-top($color:#e5e5e5){
+  position: relative;
+  &:after{
+    content:'';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 1PX;
+    transform: scaleY(0.5);
+    background-color: $color;
+  }
+}
+
+@mixin line-left($color:#e5e5e5){
+  position: relative;
+  &:before{
+    content:'';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1PX;
+    height: 100%;
+    transform: scaleX(0.5);
     background-color: $color;
   }
 }
