添加了部分组件

--- a/page/style.css
+++ b/page/style.css
@@ -135,10 +135,11 @@ body{
     background: #ff8331;
     color:#fff;
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     width: 100%;
     left: 0;
     top:0;
+    z-index: 98;
 }
 .pager-l-header__center{
     overflow: hidden;
