--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -14,3 +14,4 @@ $layer:'#{$base}-layer';
 $pull:'#{$base}-pull';
 $toast:'#{$base}-toast';
 $confirm:'#{$base}-confirm';
+$action:'#{$base}-action'
