--- a/style/higherOrdder/layer.scss
+++ b/style/higherOrdder/layer.scss
@@ -17,4 +17,20 @@
     right: 0;
     background-color: rgba(0,0,0,0.3);
   }
+  &--animate{
+    &-enter{
+      opacity: 0;
+      transition: opacity 300ms;
+    }
+    &-enter-active{
+      opacity: 1;
+    }
+    &-leave{
+      opacity: 1;
+      transition: opacity 300ms;
+    }
+    &-leave-active {
+      opacity: 0;
+    }
+  }
 }
