--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -14,4 +14,5 @@ $layer:'#{$base}-layer';
 $pull:'#{$base}-pull';
 $toast:'#{$base}-toast';
 $confirm:'#{$base}-confirm';
-$action:'#{$base}-action'
+$action:'#{$base}-action';
+$drawer:'#{$base}-drawer';
