--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -10,9 +10,13 @@ $wave-ripple:'#{$wave}__circle-ripple';
 
 $scroll:'#{$base}-scroll';
 
+$touch:'#{$base}-touch';
 $layer:'#{$base}-layer';
 $pull:'#{$base}-pull';
 $toast:'#{$base}-toast';
 $confirm:'#{$base}-confirm';
 $action:'#{$base}-action';
 $drawer:'#{$base}-drawer';
+
+$list:'#{$base}-list';
+$listItem:'#{$base}-list_item';
