--- a/style/Wave/style.scss
+++ b/style/Wave/style.scss
@@ -3,6 +3,8 @@
   position:relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
   &__wave-list{
     position: absolute;
     left: 0;
@@ -20,8 +22,9 @@
     user-select:none;
     position: relative;
     width: 100%;
-    height: 100%;
     z-index: 2;
+    padding: 0 10px;
+    box-sizing: border-box;
   }
 }
 .#{$wave-ripple}{
