--- a/style/Buttton/style.scss
+++ b/style/Buttton/style.scss
@@ -27,6 +27,7 @@
   &--ghost{
     color:#ff8831;
     background-color:transparent;
+    margin:0 auto;
   }
   &--link{
     width: auto;
@@ -57,15 +58,17 @@
   &--small{
     width: 300px;
     display: inline-block;
-    margin-right:10px;
-    margin-left: 10px;
+    margin-right:20px;
+    margin-left: 20px;
   }
   &--mini{
     width:auto;
     height: auto;
     line-height: 1.4;
-    padding: 10px 20px;
     display: inline-block;
+    .#{$wave}__content{
+      padding: 10px 20px;
+    }
   }
 }
 
