添加List进出场动画，整体优化已有组件

--- a/style/List/style.scss
+++ b/style/List/style.scss
@@ -2,10 +2,7 @@
 @import "../fn";
 
 .#{$list}{
-  &__ul{
-    list-style: none;
-    margin: 0;
-    padding:0;
+  &__list{
     overflow: hidden;
   }
   &__title{
