--- a/style/higherOrdder/layer.scss
+++ b/style/higherOrdder/layer.scss
@@ -7,15 +7,20 @@
   left:0;
   right: 0;
   z-index: 999;
-  &:before{
-    content:'';
+  &__cover,.#{$layer}__cover_touch{
+
     position: absolute;
-    display: block;
     top:0;
     bottom: 0;
     left:0;
     right: 0;
+  }
+  &__content:before{
+    @extend .#{$layer}__cover;
+    content:'';
+    display: block;
     background-color: rgba(0,0,0,0.3);
+    pointer-events: none;
   }
   &--animate{
     &-enter{
