--- a/style/Dialog/drawer.scss
+++ b/style/Dialog/drawer.scss
@@ -1,15 +1,6 @@
 @import "../name-space";
 
 .#{$drawer}{
-  &__cover{
-    content:'';
-    position: absolute;
-    display: block;
-    top:0;
-    bottom: 0;
-    left:0;
-    right: 0;
-  }
   &__inner{
     position: fixed;
     left: 0;
@@ -34,7 +25,7 @@
       transform: translateX(-100%);
       transition: transform 300ms;
     }
-    &.#{$drawer}--right .#{$drawer}__inner{
+    .#{$drawer}--right .#{$drawer}__inner{
       transform: translateX(100%);
     }
   }
@@ -42,7 +33,7 @@
     .#{$drawer}__inner{
       transform: translateX(0);
     }
-    &.#{$drawer}--right .#{$drawer}__inner{
+    .#{$drawer}--right .#{$drawer}__inner{
       transform: translateX(0);
     }
   }
@@ -56,7 +47,7 @@
     .#{$drawer}__inner{
       transform: translateX(-100%);
     }
-    &.#{$drawer}--right .#{$drawer}__inner{
+    .#{$drawer}--right .#{$drawer}__inner{
       transform: translateX(100%);
     }
   }
