--- a/style/Buttton/style.scss
+++ b/style/Buttton/style.scss
@@ -3,7 +3,7 @@
 .#{$button}{
   width: 100%;
   margin:20px auto;
-  line-height: 100%;
+  line-height: 100px;
   height: 100px;
   text-align: center;
   display:block;
