--- a/style/higherOrdder/layer.scss
+++ b/style/higherOrdder/layer.scss
@@ -1,15 +1,14 @@
 @import "../name-space";
 
 .#{$layer}{
-  position: absolute;
+  position: fixed;
   top:0;
   bottom: 0;
   left:0;
   right: 0;
   z-index: 999;
   &__cover,.#{$layer}__cover_touch{
-
-    position: absolute;
+    position: fixed;
     top:0;
     bottom: 0;
     left:0;
