添加了表单系列组件

--- a/style/Select/style.scss
+++ b/style/Select/style.scss
@@ -65,6 +65,13 @@
       z-index: 9;
     }
   }
+  &__close{
+    position: absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom: 0;
+  }
   &__group{
     flex: 1;
     text-align: center;
