--- a/style/fn.scss
+++ b/style/fn.scss
@@ -41,3 +41,20 @@
     background-color: $color;
   }
 }
+
+@mixin bg($url,$width:auto,$height:auto){
+  width: $width;
+  height: $height;
+  background-image: $url;
+  background-size: $width $height;
+}
+@mixin position($x:0,$y:0){
+  position: absolute;
+  left:$x;
+  top:$y;
+}
+@mixin ellipsis(){
+  white-space:nowrap;
+  overflow: hidden;
+  text-overflow:ellipsis;
+}
