--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -3,6 +3,8 @@ $button:'#{$base}-button';
 $form:'#{$base}-form';
 $field:'#{$base}-field';
 $input:'#{$base}-input';
+$selectField:'#{$base}-form-select';
+$submitButton:'#{$base}-submit-button';
 $pass-word:'#{$base}-pass_word';
 
 $wave:'#{$base}-wave';
