--- a/style/Form/form.scss
+++ b/style/Form/form.scss
@@ -1,5 +1,51 @@
 @import "../name-space";
+@import "../fn";
 
 .#{$form}{
-  margin: 30px 40px;
+  margin: 30px 0;
+  &--inline{
+    .#{$field}{
+      padding: 0;
+      &__content{
+        margin: 10px 0 10px 60px;
+        display: flex;
+        align-items: center;
+        @include line-bottom;
+        &:before{
+          content:'';
+          display: block;
+          position: absolute;
+          bottom: 0;
+          width: 100%;
+          height: 2PX;
+          transform: scaleX(0);
+          transition: transform 500ms cubic-bezier(0.23,1,0.32,1);
+          background-color: #ff8831;
+        }
+      }
+      &__label{
+        width: 200px;
+      }
+      &__inner{
+        flex: 1;
+        &:before,&:after{
+          content:normal;
+        }
+        input{
+        }
+      }
+      &__msg{
+        display: none;
+      }
+      &--active{
+        .#{$field}__content:before{
+          transform: scaleX(1);
+        }
+      }
+    }
+  }
+  .#{$submitButton}{
+    margin-top: 100px;
+    width: 85%;
+  }
 }
