--- a/style/higherOrdder/layer.scss
+++ b/style/higherOrdder/layer.scss
@@ -1,14 +1,16 @@
 @import "../name-space";
 
 .#{$layer}{
-  position: fixed;
-  top:0;
-  bottom: 0;
-  left:0;
-  right: 0;
-  z-index: 999;
-  &__cover,.#{$layer}__cover_touch{
+  &__inner{
     position: fixed;
+    top:0;
+    bottom: 0;
+    left:0;
+    right: 0;
+    z-index: 1000;
+  }
+  &__cover,.#{$layer}__cover_touch{
+    position: absolute;
     top:0;
     bottom: 0;
     left:0;
