--- a/style/Form/form.scss
+++ b/style/Form/form.scss
@@ -7,7 +7,8 @@
     .#{$field}{
       padding: 0;
       &__content{
-        margin: 10px 0 10px 60px;
+        padding: 10px 0 10px 0;
+        margin-left: 40px;
         display: flex;
         align-items: center;
         @include line-bottom;
