修改switch组件样式

--- a/style/Form/form.scss
+++ b/style/Form/form.scss
@@ -34,6 +34,9 @@
         }
         input{
         }
+        .#{$switch}{
+          padding: 0 6px;
+        }
       }
       &__msg{
         display: none;
