--- a/style/name-space.scss
+++ b/style/name-space.scss
@@ -4,6 +4,7 @@ $form:'#{$base}-form';
 $field:'#{$base}-field';
 $input:'#{$base}-input';
 $selectField:'#{$base}-form-select';
+$checkList:'#{$base}-check-list';
 $submitButton:'#{$base}-submit-button';
 $pass-word:'#{$base}-pass_word';
 
