修改版本号

--- a/style/Form/check-list.scss
+++ b/style/Form/check-list.scss
@@ -17,8 +17,11 @@
     content:normal;
   }
   &__item {
-    .#{$listItem}__media{
-      padding: 0;
+    &.#{$listItem}{
+      background-color: transparent;
+      &__media{
+        padding: 0;
+      }
     }
     &--checked{
       .#{$button}{
